Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
None
-
None
-
Not for Release Notes
-
Q3/2026 Server Maintenance
Description
Issue:
-------------
mariadbd: /home/ppandith/wl-15621/sql/item_subselect.cc:1474: virtual longlong Item_singlerow_subselect::val_int(): Assertion `fixed()' failed.
Version Used:
--------------------
Branch : bb-main-mdev-15621
Commit : 3a7da2bf0d5af99ca4e83468a2cc2eaaa55c31aa
How to repro
---------------------
create table t1 (c date) engine=innodb |
PARTITION BY RANGE COLUMNS (c) |
INTERVAL (SELECT 1) DAY |
(
|
PARTITION p0 VALUES LESS THAN ('2026-04-20') |
);
|
Stack trace:
-----------------
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
|
#3 my_write_core (sig=6) at /home/ppandith/wl-15621/mysys/stacktrace.c:424
|
#4 handle_fatal_signal (sig=6) at /home/ppandith/wl-15621/sql/signal_handler.cc:298
|
#5 <signal handler called>
|
#6 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
#7 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
#8 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
|
#9 __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
|
#10 __GI_abort () at ./stdlib/abort.c:79
|
#11 __assert_fail_base (fmt="%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry="fixed()",
|
file=file@entry="/home/ppandith/wl-15621/sql/item_subselect.cc", line=line@entry=1474,
|
function=function@entry="virtual longlong Item_singlerow_subselect::val_int()") at ./assert/assert.c:96
|
#12 __assert_fail (assertion="fixed()", file="/home/ppandith/wl-15621/sql/item_subselect.cc", line=1474,
|
function="virtual longlong Item_singlerow_subselect::val_int()") at ./assert/assert.c:105
|
#13 Item_singlerow_subselect::val_int (this=) at /home/ppandith/wl-15621/sql/item_subselect.cc:1474
|
#14 Item::to_longlong_null (this=) at /home/ppandith/wl-15621/sql/item.h:1464
|
#15 Item::to_longlong_hybrid_null (this=) at /home/ppandith/wl-15621/sql/item.h:1474
|
#16 get_interval_value (thd=, args=, int_type=INTERVAL_DAY, interval=) at /home/ppandith/wl-15621/sql/item_timefunc.cc:2007
|
#17 partition_info::set_range_interval (this=, thd=, ival=, type=INTERVAL_DAY, table_name="t1")
|
at /home/ppandith/wl-15621/sql/sql_partition_auto_interval.cc:391
|
#18 MYSQLparse (thd=) at /home/ppandith/wl-15621/sql/sql_yacc.yy:5208
|
#19 parse_sql (thd=, parser_state=, creation_ctx=, do_pfs_digest=true) at /home/ppandith/wl-15621/sql/sql_parse.cc:10372
|
#20 mysql_parse (thd=,
|
rawbuf="create table t1 (c date) engine=innodb\nPARTITION BY RANGE COLUMNS (c)\nINTERVAL (SELECT 1) DAY\n(\n PARTITION p0 VALUES LESS THAN ('2026-04-20')\n)", length=144, parser_state=) at /home/ppandith/wl-15621/sql/sql_parse.cc:7897
|
#21 dispatch_command (command=COM_QUERY, thd=,
|
packet="create table t1 (c date) engine=innodb\nPARTITION BY RANGE COLUMNS (c)\nINTERVAL (SELECT 1) DAY\n(\n PARTITION p0 VALUES LESS THAN ('2026-04-20')\n)", packet_length=144, blocking=true) at /home/ppandith/wl-15621/sql/sql_parse.cc:1903
|
#22 do_command (thd=, blocking=true) at /home/ppandith/wl-15621/sql/sql_parse.cc:1437
|
#23 do_handle_one_connection (connect=, put_in_cache=true) at /home/ppandith/wl-15621/sql/sql_connect.cc:1503
|
#24 handle_one_connection (arg=) at /home/ppandith/wl-15621/sql/sql_connect.cc:1415
|
#25 pfs_spawn_thread (arg=) at /home/ppandith/wl-15621/storage/perfschema/pfs.cc:2198
|
#26 start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
|
#27 clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Attachments
Issue Links
- is caused by
-
MDEV-15621 Implement interval partitioning similar to Oracle
-
- Closed
-